--- a/.github/workflows/deploy_on_portainer.yml
+++ b/.github/workflows/deploy_on_portainer.yml
@@ -26,10 +26,9 @@ jobs:
           echo "IMAGE_TAG=sha-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
           echo "DOCKER_IMAGE_URI=${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}" >> $GITHUB_ENV
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      - name: Login to docker Container Registry
+        uses: docker/login-action@v2
         with:
-          registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ env.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_SECRET }}  
 
